--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yaml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yaml
@@ -1,73 +1,48 @@
-name: Feature Request
-description: Submit a feature request
-title: "[Feature Request]: "
-labels: ["enhancement", "triage"]
-assignees:
-  - octocat
-body:
-  - type: markdown
-    attributes:
-      value: |
-        Thanks for taking the time to submit a feature request!
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we have questions about your request?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
-  - type: textarea
-    id: what-feature
-    attributes:
-      label: What feature are you requesting?
-      description: Describe the feature in detail, including how it would be used and why it would be useful.
-      placeholder: Please provide a detailed description of the feature you are requesting.
-    validations:
-      required: true
-  - type: input
-    id: priority
-    attributes:
-      label: Priority
-      description: What priority would you assign to this feature?
-      placeholder: ex. High, Medium, Low
-      validation:
-        pattern: '^(High|Medium|Low)$'
-        message: 'Please provide a valid priority (High, Medium, Low)'
-      value: 'Medium'
-    validations:
-      required: true
-  - type: dropdown
-    id: version
-    attributes:
-      label: Version
-      description: What version of our software would this feature apply to?
-      options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
-    validations:
-      required: true
-  - type: input
-    id: timeline
-    attributes:
-      label: Timeline
-      description: When would you need this feature by?
-      placeholder: ex. Next week, Next month, etc.
-    validations:
-      required: false
-  - type: textarea
-    id: additional-info
-    attributes:
-      label: Additional Information
-      description: Is there any additional information that you would like to provide?
-      placeholder: Please provide any additional information that would help us evaluate your feature request.
-    validations:
-      required: false
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
+name: '💥🚀 Amazing Feature Request 💥🚀'
+description: "Suggest an idea for making our app even more awesome! 🔥🙌"
+labels: ['type:enhancement']
+assignees: ''
+
+sections:
+  - title: "🤔 Is your proposal related to a problem?"
+    questions:
+      - id: 'problem-description'
+        title: "💥 What's the problem?"
+        type: 'textarea'
+        placeholder: "I'm always frustrated when..."
+        required: true
+
+  - title: "💡 Describe the solution you'd like"
+    questions:
+      - id: 'solution-description'
+        title: "💡 What's your idea?"
+        type: 'textarea'
+        placeholder: "I'd love it if the app could..."
+        required: true
+
+  - title: "💡 Alternatives you've considered"
+    questions:
+      - id: 'alternatives-description'
+        title: "🤔 Have you thought of other solutions?"
+        type: 'textarea'
+        placeholder: "I've also considered..."
+        required: false
+
+  - title: "🌟 Additional context"
+    questions:
+      - id: 'additional-context'
+        title: "🌟 Anything else you'd like to add?"
+        type: 'textarea'
+        placeholder: "This feature would be especially useful for..."
+        required: false
+
+  - title: "📌 Code of Conduct"
+    questions:
+      - id: 'code-of-conduct'
+        title: "📌 Code of Conduct"
+        type: 'checkbox'
+        description: "By submitting this issue, you agree to follow our Code of Conduct."
+        options:
+          - value: 'agree'
+            label: "I agree to follow the Code of Conduct"
+            required: true
