--- a/.github/ISSUE_TEMPLATE/NEW_ISSUE.yaml
+++ b/.github/ISSUE_TEMPLATE/NEW_ISSUE.yaml
@@ -1,5 +1,5 @@
-name: Bug Report
-description: File a bug report
+name: 🐛 Bug Report
+description: File a bug report 🐞
 title: "[Bug]: "
 labels: ["bug", "triage"]
 assignees:
@@ -8,20 +8,22 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        👋 Thanks for taking the time to report a bug! 
+        
+        🙏 We appreciate your help in making our software better. Please fill out the form below to tell us what happened.
   - type: input
     id: contact
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
+      label: 📞 Contact Details
+      description: How can we get in touch with you if we need more info? 📧
       placeholder: ex. email@example.com
     validations:
       required: false
   - type: textarea
     id: what-happened
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
+      label: ❓ What happened?
+      description: Please describe the issue you encountered. What did you expect to happen? 🤔
       placeholder: Tell us what you see!
       value: "A bug happened!"
     validations:
@@ -29,8 +31,8 @@ body:
   - type: dropdown
     id: version
     attributes:
-      label: Version
-      description: What version of our software are you running?
+      label: 📊 Version
+      description: What version of our software are you running? 🔢
       options:
         - 1.0.2 (Default)
         - 1.0.3 (Edge)
@@ -39,7 +41,7 @@ body:
   - type: dropdown
     id: browsers
     attributes:
-      label: What browsers are you seeing the problem on?
+      label: 🌐 What browsers are you seeing the problem on?
       multiple: true
       options:
         - Firefox
@@ -49,14 +51,14 @@ body:
   - type: textarea
     id: logs
     attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      label: 📝 Relevant log output
+      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks. 💻
       render: shell
   - type: checkboxes
     id: terms
     attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
+      label: 💬 Code of Conduct
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com) 👥
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
